<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dining_table"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/textViewNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/textViewSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/group_size"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/editTextSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textSize="15dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"/>

            <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radioGroupArea"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonSmoking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/smoking"
                        android:textSize="15dp" />

                    <RadioButton
                        android:id="@+id/radioButtonNonSmoking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/non_smoking"
                        android:textSize="15dp" />


                </RadioGroup>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/confirm"/>

                <Button
                    android:id="@+id/buttonReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reset"/>




            </LinearLayout>









        </LinearLayout>
    </ScrollView>


</LinearLayout>
